--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/Baymax.png" alt="">
+            <img class="img-fluid" src="img/portfolio/digitaldrift.png" alt="Freelance Web Developer">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -277,10 +277,10 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Pure CSS Animated Baymax Robot</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Digital Drifter Designs</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="img/portfolio/Baymax.png" alt="Disney Animation">
-            <p class="mb-5">A simple Baymax robot animation using pure CSS5 <a href="https://ravenusric.github.io/robo-pal-pure-css/">View Live</a></p>
+            <img class="img-fluid mb-5" src="img/portfolio/digitaldrift.png" alt="Web design">
+            <p class="mb-5">Contract to build a starter website(HTML5,CSS3,JavaScript,JQuery,PHP,Bootstrap) <a href="https://digitaldrifterdesigns.com/">View Live</a></p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
