--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/skrittheadershot.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Robopals.png" alt="ReactJs app">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -95,7 +95,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/newcatawba.png" alt="">
+            <img class="img-fluid" src="img/portfolio/newcatawba.png" alt="Coffee Shop">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -105,7 +105,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/scraper2.png" alt="">
+            <img class="img-fluid" src="img/portfolio/scraper2.png" alt="scraper">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -115,7 +115,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/ravenusric.github.io_JavaScript-Issue-Tracker_index.html.png" alt="">
+            <img class="img-fluid" src="img/portfolio/ravenusric.github.io_JavaScript-Issue-Tracker_index.html.png" alt="javascript">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -125,7 +125,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/backgroundgenerator.png" alt="">
+            <img class="img-fluid" src="img/portfolio/backgroundgenerator.png" alt="color gradient">
           </a>
         </div>
       </div>
@@ -299,10 +299,10 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Lil'Skritt</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Robo Pals</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="img/portfolio/skrittheadershot.png" alt="Rap">
-            <p class="mb-5">Lil Skritt was listed as the number 1 rapper in Charlotte,NC by Creative Loafing. <a href="https://ravenusric.github.io/skritt/">View Live</a></p>
+            <img class="img-fluid mb-5" src="img/portfolio/Robopals.png" alt="ReactJs App">
+            <p class="mb-5">Robo Pals is a responsive , dynamic robot avatar database list with search function for easy navigation. <a href="https://ravenusric.github.io/robopals/">View Live</a></p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
