--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/backgroundgenerator.png" alt="color gradient">
+            <img class="img-fluid" src="img/portfolio/skrittheadershot.png" alt="LilSkritt">
           </a>
         </div>
       </div>
@@ -387,10 +387,10 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Background Color Generator</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Lil Skritt</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="img/portfolio/backgroundgenerator.png" alt="color generator">
-            <p class="mb-5">This is a linear gradient generator that can be used for various projects  <a href="https://ravenusric.github.io/color-gradient-generator/">View Live</a></p>
+            <img class="img-fluid mb-5" src="img/portfolio/skrittheadershot.png" alt="color generator">
+            <p class="mb-5">Lil Skritt is a Charlotte Rap Artist that hired me to build his website <a href="https://ravenusric.github.io/skritt/">View Live</a></p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
